# afanasieff-rs

./: .gitignore  .tarpaulin.toml  Cargo.toml  README.md  codebook.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  cross-compile.yml  release.yml
src/: main.rs
src/cron/: mod.rs  quote_per_hour.rs
src/ops/: consts.rs  matthew.rs  mod.rs  predicates.rs  quotes.rs  send.rs  stream.rs  vinograd.rs
