[package]
name = "afanasieff-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
rand = "0.9.2"
openssl = { version = "0.10", features = ["vendored"] }
dashmap = "6.1.0"
once_cell = "1.21.3"
teloxide_tests = "0.4.0"

[package.metadata.cross.target.x86_64-unknown-linux-musl]
image = "ghcr.io/cross-rs/x86_64-unknown-linux-musl:latest"

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"
