[workspace]
resolver = "2"

[package]
name = "afanasieff-rs"
version = "0.1.0"
edition = "2024"
description = "A Rust-based Telegram bot"
license = "MIT"
repository = "https://github.com/l3r8yJ/afanasieff-rs"
readme = "README.md"
keywords = ["telegram", "bot", "teloxide"]
categories = ["network-programming"]

[lints.clippy]
multiple_crate_versions = "allow"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
rand = "0.9.2"
openssl = { version = "0.10", features = ["vendored"] }
dashmap = "6.1.0"
once_cell = "1.21.3"
teloxide_tests = "0.4.0"

[package.metadata.cross.target.x86_64-unknown-linux-musl]
image = "ghcr.io/cross-rs/x86_64-unknown-linux-musl:latest"
